--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 Debug
 /Eventr/Eventr/Eventr.iOS/obj/iPhone/Debug
+/Eventr-Webservices/obj
+/Eventr-Webservices/Properties/PublishProfiles/eventr - Web Deploy.pubxml.user
