--- a/Eventr-Webservices/Eventr-Webservices.csproj
+++ b/Eventr-Webservices/Eventr-Webservices.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,4 +14,14 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="tests\UnitTest1.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="tests\obj\tests.csproj.nuget.g.props" />
+    <None Remove="tests\obj\tests.csproj.nuget.g.targets" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="tests\obj\project.assets.json" />
+  </ItemGroup>
 </Project>
