--- a/Eventr-Webservices/Eventr-Webservices.csproj
+++ b/Eventr-Webservices/Eventr-Webservices.csproj
@@ -6,12 +6,14 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Folder Include="Models\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Azure.DocumentDB" Version="1.17.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,5 +25,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Remove="tests\obj\project.assets.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Configuration" />
   </ItemGroup>
 </Project>
