--- a/Eventr/package.json
+++ b/Eventr/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "expo": "^19.0.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.46.1"
+    "react-native": "^0.46.1",
+    "react-native-fontawesome": "^5.7.0"
   }
 }
