--- a/Eventr/package.json
+++ b/Eventr/package.json
@@ -20,7 +20,9 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.2.2",
     "expo": "^19.0.0",
+    "native-base": "^2.3.7",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1",
     "react-native-fontawesome": "^5.7.0"
