--- a/Eventr/package.json
+++ b/Eventr/package.json
@@ -27,6 +27,9 @@
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1",
     "react-native-fontawesome": "^5.7.0",
-    "react-navigation": "^1.0.0-beta.30"
+    "react-navigation": "^1.0.0-beta.27",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   }
 }
