--- a/Eventr/package.json
+++ b/Eventr/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
+    "eslint": "^4.19.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.7.0",
     "jest-expo": "~19.0.0",
     "prettier": "^1.8.1",
     "react-native-scripts": "1.1.0",
