WIP: mostly lifting; fix for onclick to oppress; tweak to attendees; add jest globals to eslintrc

--- a/Eventr/.eslintrc.json
+++ b/Eventr/.eslintrc.json
@@ -5,6 +5,10 @@
     "es6": true,
     "node": true
   },
+  "globals" : {
+    "it": true,
+    "expect": true
+  },
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaFeatures": {
