--- a/Eventr/package.json
+++ b/Eventr/package.json
@@ -32,6 +32,7 @@
     "prop-types": "^15.6.0",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1",
+    "react-native-datepicker": "^1.6.0",
     "react-native-fontawesome": "^5.7.0",
     "react-navigation": "^1.0.0-beta.27",
     "react-redux": "^5.0.6",
