--- a/Eventr/package.json
+++ b/Eventr/package.json
@@ -8,9 +8,9 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
-    "jest-expo": "~19.0.0",
+    "jest-expo": "^26.0.0",
     "prettier": "^1.8.1",
-    "react-native-scripts": "1.1.0",
+    "react-native-scripts": "^1.13.1",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -26,15 +26,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^6.2.2",
-    "expo": "^19.0.0",
+    "expo": "^26.0.0",
     "luxon": "^1.0.0",
     "native-base": "^2.3.7",
     "prop-types": "^15.6.0",
-    "react": "16.0.0-alpha.12",
-    "react-native": "^0.46.1",
+    "react": "16.3.0-alpha.1",
+    "react-native": "^0.54.4",
     "react-native-datepicker": "^1.6.0",
     "react-native-fontawesome": "^5.7.0",
-    "react-navigation": "^1.0.0-beta.27",
+    "react-navigation": "1.5.8",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
