--- a/Eventr/package.json
+++ b/Eventr/package.json
@@ -11,7 +11,8 @@
     "jest-expo": "^26.0.0",
     "prettier": "^1.8.1",
     "react-native-scripts": "^1.13.1",
-    "react-test-renderer": "16.0.0-alpha.12"
+    "react-test-renderer": "16.0.0-alpha.12",
+    "watchman": "^1.0.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
