--- a/Eventr/package.json
+++ b/Eventr/package.json
@@ -27,17 +27,19 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^6.2.2",
+    "aws-appsync": "^1.0.17",
+    "aws-appsync-react": "^1.0.10",
+    "aws-sdk": "^2.235.1",
     "expo": "^26.0.0",
+    "graphql-tag": "^2.9.2",
     "luxon": "^1.0.0",
     "native-base": "^2.3.7",
     "prop-types": "^15.6.0",
     "react": "16.3.0-alpha.1",
+    "react-apollo": "^2.1.4",
     "react-native": "^0.54.4",
     "react-native-datepicker": "^1.6.0",
     "react-native-fontawesome": "^5.7.0",
-    "react-navigation": "1.5.8",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "react-navigation": "1.5.8"
   }
 }
