--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Eventr",
+  "name": "@weaver/native",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -11,8 +11,7 @@
     "jest-expo": "^26.0.0",
     "prettier": "^1.8.1",
     "react-native-scripts": "^1.13.1",
-    "react-test-renderer": "16.0.0-alpha.12",
-    "watchman": "^1.0.0"
+    "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -27,22 +26,25 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^6.2.2",
-    "apollo-link": "^1.2.2",
-    "apollo-link-state": "^0.4.1",
-    "aws-appsync": "^1.0.17",
-    "aws-appsync-react": "^1.0.10",
-    "aws-sdk": "^2.235.1",
+    "apollo-boost": "^0.1.10",
     "expo": "^26.0.0",
+    "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "luxon": "^1.0.0",
     "native-base": "^2.3.7",
     "prop-types": "^15.6.0",
     "react": "16.3.0-alpha.1",
-    "react-apollo": "^2.1.4",
-    "react-native": "^0.54.4",
+    "react-apollo": "^2.1.6",
+    "react-native": "0.54.2",
     "react-native-datepicker": "^1.6.0",
     "react-native-fontawesome": "^5.7.0",
     "react-navigation": "1.5.8",
     "uuid": "^3.2.1"
-  }
+  },
+  "workspaces": {
+    "nohoist": [
+      "**/**/**"
+    ]
+  },
+  "license": "mit"
 }
