--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -51,6 +51,7 @@
     "@expo/vector-icons": "^6.2.2",
     "apollo-boost": "^0.1.10",
     "expo": "^26.0.0",
+    "formik": "^0.11.11",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "luxon": "^1.0.0",
