--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@expo/vector-icons": "^6.2.2",
     "apollo-boost": "^0.1.10",
+    "apollo-link-context": "^1.0.8",
     "expo": "^26.0.0",
     "formik": "^0.11.11",
     "graphql": "^0.13.2",
