--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -12,7 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^2.0.0",
-    "graphql": "^0.13.2"
+    "graphql": "^0.13.2",
+    "@google-cloud/datastore": "^2.0.0"
   },
   "devDependencies": {
     "@types/graphql": "^0.13.4",
