--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -1,76 +1,45 @@
 {
   "name": "@weaver/native",
   "version": "0.1.0",
+  "main": "node_modules/expo/AppEntry.js",
   "private": true,
-  "devDependencies": {
-    "@types/expo": "^27.0.5",
-    "@types/jest": "^23.1.4",
-    "@types/react": "^16.4.6",
-    "@types/react-dom": "^16.0.6",
-    "@types/react-native": "^0.55.27",
-    "@types/react-navigation": "^2.0.9",
-    "@types/react-test-renderer": "^16.0.1",
-    "babel-eslint": "^8.2.2",
-    "concurrently": "^3.6.0",
-    "eslint": "^4.19.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "jest-expo": "^26.0.0",
-    "prettier": "^1.8.1",
-    "react-native-scripts": "^1.13.1",
-    "react-test-renderer": "16.0.0-alpha.12",
-    "rimraf": "^2.6.2",
-    "ts-jest": "^23.0.0",
-    "tslint": "^5.10.0",
-    "typescript": "^2.9.2"
-  },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "eject": "expo eject",
     "lint": "tslint src/**/*.ts",
     "tsc": "tsc",
     "clean": "rimraf build",
     "build": "yarn run clean && yarn run tsc --",
     "watch": "yarn run build -- -w",
-    "devAndroid": "concurrently \"yarn run watch\" \"yarn run android\"",
-    "buildRunAndroid": "yarn run build && yarn run watchAndRunAndroid ",
-    "devIOS": "concurrently \"yarn run watch\" \"yarn run ios\"",
-    "buildRunIOS": "yarn run build && yarn run watchAndRunIOS ",
-    "dev": "concurrently \"yarn run watch\" \"yarn run start\"",
-    "buildAndStart": "yarn run build && yarn run watchAndStart "
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "dev": "concurrently \"yarn run watch\" \"yarn run start\""
   },
   "dependencies": {
-    "@expo/vector-icons": "^6.2.2",
     "apollo-boost": "^0.1.10",
     "apollo-link-context": "^1.0.8",
-    "expo": "^26.0.0",
-    "formik": "^0.11.11",
+    "expo": "^30.0.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "luxon": "^1.0.0",
-    "native-base": "^2.3.7",
-    "prop-types": "^15.6.0",
-    "react": "16.3.0-alpha.1",
+    "native-base": "^2.8.1",
+    "react": "16.3.1",
     "react-apollo": "^2.1.6",
-    "react-native": "0.54.2",
-    "react-native-datepicker": "^1.6.0",
-    "react-native-fontawesome": "^5.7.0",
-    "react-navigation": "1.5.8",
-    "util": "^0.11.0",
-    "uuid": "^3.2.1"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-material-bottom-navigation": "^1.0.1",
+    "react-navigation": "^2.18.0"
   },
   "workspaces": {
     "nohoist": [
       "**/**/**"
     ]
   },
-  "license": "mit"
+  "devDependencies": {
+    "@types/react": "^16.4.17",
+    "@types/react-dom": "^16.0.9",
+    "@types/react-native": "^0.57.6",
+    "@types/react-navigation": "^2.0.24",
+    "concurrently": "^4.0.1",
+    "typescript": "^3.1.3"
+  }
 }
