--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -40,6 +40,17 @@
     "@types/react-native": "^0.57.6",
     "@types/react-navigation": "^2.0.24",
     "concurrently": "^4.0.1",
+    "prettier": "^1.14.3",
+    "rimraf": "^2.6.2",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.1.3"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "none",
+    "bracketSpacing": false,
+    "jsxBracketSameLine": true,
+    "printWidth": 100
   }
 }
