gql auth + create event modal

--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -27,6 +27,7 @@
     "react-apollo": "^2.1.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
     "react-native-material-bottom-navigation": "^1.0.1",
+    "react-native-modal": "^6.5.0",
     "react-navigation": "^2.18.0"
   },
   "workspaces": {
