--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -16,6 +16,7 @@
     "graphql": "^0.13.2"
   },
   "devDependencies": {
+    "@types/google-cloud__datastore": "^1.3.3",
     "@types/graphql": "^0.13.4",
     "@types/node": "10.3.4",
     "ts-node-dev": "^1.0.0-pre.26",
