--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -28,6 +28,7 @@
     "react": "16.5.0",
     "react-apollo": "^2.1.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-datepicker": "^1.7.2",
     "react-native-material-bottom-navigation": "^1.0.1",
     "react-native-modal": "^6.5.0",
     "react-navigation": "^2.18.0"
