--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -4,7 +4,7 @@
   "description": "graphql api for weaver",
   "main": "./src/index.js",
   "scripts": {
-    "start": "node ./lib/src",
+    "start": "node ./lib/src | tee all.log",
     "build": "tsc --p ./",
     "dev": "DEBUG=true GOOGLE_APPLICATION_CREDENTIALS=./weaver-demo-432554c246f9.json ts-node-dev ./src",
     "gitPub": "node ./publish.js"
@@ -23,3 +23,4 @@
     "typescript": "^3.1.6"
   }
 }
+
